<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <!-- DataBinding 变量可以在这里定义 -->
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#F5F7FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section with Gradient -->
        <LinearLayout
            android:id="@+id/fw_header_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:orientation="vertical"
            android:background="@drawable/bg_gradient_header"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fitsSystemWindows="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fw_update"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RFID Update Manager"
                android:textColor="#E0FFFFFF"
                android:layout_marginLeft="20dp"
                android:textSize="14sp"/>
        </LinearLayout>




        <!-- Status Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@color/white">
                <LinearLayout
                    android:id="@+id/ll_uart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intg_update"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_ver"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_ver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:background="#F0F8F8"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Status Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_status"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/time_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(00:00:00)"
                        android:textColor="@color/black"
                        android:layout_alignParentRight="true"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        />
                </RelativeLayout>


                <TextView
                    android:id="@+id/param_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:background="#F0F8F8"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>




        <!-- Integrated Device Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/white">




                    <!-- 文件选择区域 -->
                    <LinearLayout
                        android:id="@+id/ll_file_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="16dp"
                         >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/file_path"
                            android:textColor="#666666"
                            android:textSize="14sp"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:id="@+id/tv_file_path"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:padding="12dp"
                            android:text="@string/no_choice_file"
                            android:textColor="#999999"
                            android:textSize="13sp"
                            android:background="@drawable/bg_edittext"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="8dp"/>

                        <Button
                            android:id="@+id/btn_select_file"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_button_selector_secondary"
                            android:text="@string/button_choice_file_zip_bin"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <!-- Device Firmware Section -->
                    <LinearLayout
                        android:id="@+id/ll_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <Button
                                android:id="@+id/bt_start_update"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:background="@drawable/bg_button_selector_modern"
                                android:text="@string/up_hand_os"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="14sp"/>
                        </LinearLayout>
                    </LinearLayout>


                    <!-- RFID Chip Section -->
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </LinearLayout>
</ScrollView>
</layout>